# anatree

./: .gitignore  .gitmodules  Anatree.cabal  CMakeLists.txt  Doxyfile.in  README.md  anatree.h  makefile
.github/workflows/: cpp_docs.yml  cpp_header-only.yml  cpp_test.yml  header-only.yml  hs_docs.yml  hs_test.yml  test.yml
cpp/: README.md  anatree_8h_source.html  annotated.html  annotated_dup.js  classanatree.html  classanatree.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
cpp/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  classes_0.js  functions_0.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
hs/: Anatree.cabal  Anatree.haddock  Anatree.html  CHANGELOG.md  README.md  doc-index.html  index.html
hs/.github/workflows/: hs_test.yml
hs/src/Anatree/: Util.hs
src/: Anatree.hs
test/: Main.hs
trp/: .gitignore  README.md  makefile
trp/lib/: Id.trp  pi.trp
trp/src/: Anatree.trp
trp/test/: Unit.trp
